syntax = "proto3";

package coretex.v1;
option go_package = "github.com/yaront1111/coretex-os/core/protocol/pb/v1";

enum JobPriority {
  JOB_PRIORITY_UNSPECIFIED = 0;
  JOB_PRIORITY_BATCH       = 1;
  JOB_PRIORITY_INTERACTIVE = 2;
  JOB_PRIORITY_CRITICAL    = 3;
}

enum JobStatus {
  option allow_alias = true;
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_COMPLETED   = 1; // legacy name retained
  JOB_STATUS_SUCCEEDED   = 1; // preferred name
  JOB_STATUS_FAILED      = 2;
  JOB_STATUS_TIMEOUT     = 3;
  JOB_STATUS_DENIED      = 4;
  JOB_STATUS_CANCELLED   = 5;
  // Extended states to align with agent protocol; append only.
  JOB_STATUS_PENDING     = 6;
  JOB_STATUS_SCHEDULED   = 7;
  JOB_STATUS_DISPATCHED  = 8;
  JOB_STATUS_RUNNING     = 9;
}

message JobRequest {
  string job_id = 1;
  string topic = 2;                // logical topic / NATS subject
  JobPriority priority = 3;
  string context_ptr = 4;          // "redis://jobs/{id}/context" (future)
  string adapter_id = 5;
  map<string, string> env_vars = 6;
  string parent_job_id = 10;       // optional workflow chaining
  string workflow_id   = 11;       // optional workflow identifier
  int32 step_index     = 12;       // optional step position
  string memory_id     = 13;       // long-lived context identifier
  ContextMode context_mode = 14;   // how to treat context (raw/chat/rag)
  int32 max_input_tokens  = 15;    // optional budget hints
  int32 max_output_tokens = 16;    // optional budget hints
  string org_id         = 17;
  string team_id        = 18;
  string project_id     = 19;
  string principal_id   = 20;
}

message JobResult {
  string job_id = 1;
  JobStatus status = 2;
  string result_ptr = 3;           // "redis://jobs/{id}/result" (future)
  string worker_id = 4;
  int64 execution_ms = 5;
  reserved 6, 7, 8;
}

enum ContextMode {
  CONTEXT_MODE_UNSPECIFIED = 0;
  CONTEXT_MODE_RAW = 1;
  CONTEXT_MODE_CHAT = 2;
  CONTEXT_MODE_RAG = 3;
}
